--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "foundation": "~5.5.3",
     "foundation-sites": "~6.1.1",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "magnific-popup": "~1.0.1"
   }
 }
