--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,8 @@
     "foundation-sites": "~6.1.1",
     "bootstrap": "~3.3.6",
     "magnific-popup": "~1.0.1",
-    "video.js": "~5.6.0"
+    "video.js": "~5.6.0",
+    "angular-loading-bar": "^0.8.0",
+    "angular": "angularjs#^1.4.9"
   }
 }
