--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "magnific-popup": "~1.0.1",
     "video.js": "~5.6.0",
     "angular-loading-bar": "^0.8.0",
-    "angular": "angularjs#^1.4.9"
+    "angular": "angularjs#^1.4.9",
+    "angular-animate": "^1.4.9"
   }
 }
