--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,7 @@
     "normalize-css": "normalize.css#^3.0.3",
     "html5-boilerplate": "^5.3.0",
     "pickadate": "^3.5.6",
-    "bootswatch": "^3.3.6+1"
+    "bootswatch": "^3.3.6+1",
+    "font-awesome": "^4.5.0"
   }
 }
