--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "phpmailer/phpmailer": "^5.2"
+        "phpmailer/phpmailer": "^5.2",
+        "league/oauth2-google": "^1.0"
     }
 }
