--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "angular-material": "^1.1.0-rc.5",
     "material-design-icons": "^2.2.3",
     "material-design-lite": "^1.1.3",
+    "node-waves": "^0.7.5",
     "vue": "^1.0.26",
     "vue-mdl": "^0.8.5"
   }
